--- a/.gitignore
+++ b/.gitignore
@@ -64,3 +64,6 @@ node_modules/
 
 # dotenv environment variables file
 .env
+
+# configuration file
+our-map-d5878-firebase-adminsdk-vhilt-6c9b6a9544.json
